test_cases/negative/argument_mismatch_custom.snek
def Double(value) {
    return Add(value, value);
}

export DEFAULT = Double();
